# chunx

./: .clang-format  .clang-tidy  .gitignore  .gitpod.yml  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
chunx/: FixedSizeChunker.cpp  FixedSizeChunker.h  InputStream.h  InputStreamBuffer.h  OutputStream.h  OutputStreamBuffer.h  chunk_if.cpp  chunk_if.h  fixed_length_policy.cpp  fixed_length_policy.h  join.cpp  join.h  join_range.cpp  join_range.h  length_policy.cpp  length_policy.h  length_predicate.cpp  length_predicate.h  partition_copy.cpp  partition_copy.h  policy.cpp  policy.h  split.cpp  split.h  variable_length_policy.cpp  variable_length_policy.h
chunx/detail/: join_iterator.cpp  join_iterator.h
chunx/test/: FixedSizeChunker.cpp  InputStream.cpp  NodeStream.cpp  NodeStream.h  OutputStream.cpp  fixed_length_policy_test.cpp  join_test.cpp  length_policy_test.cpp  length_predicate_test.cpp
cmake/: chunxConfig.cmake
include/chunx/: FixedSizeChunker.h  OutputStream.h
src/: InputStream.cpp  OutputStream.cpp
test/: FixedSizeChunker.cpp  InputStream.cpp  NodeStream.cpp  OutputStream.cpp
